# airbnb-clone-backend

./: pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chatroom_users_alter_message_chatroom_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_rename_experiencemodel_experience.py  0003_experience_category_alter_service_description_and_more.py  0004_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_rename_kind_room_type.py  0003_room_name_alter_amenity_description.py  0004_alter_amenity_options_rename_type_room_type.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py  (+1 more)
wishlists/: admin.py  models.py
(+2 files in other folders)
