[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["Kim Beomjun <wnsl9704@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
pillow = "9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
